# wgltf

./: .gitignore  Cargo.toml  README.md
shaders/: draw_mesh.wgsl  shader.wgsl
src/: camera.rs  lib.rs  main.rs  shader.wgsl  state.rs
src/state/: global_ubo.rs
src/utils/: frame_counter.rs  input.rs  mod.rs
