[package]
name = "wgltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
color-eyre = "0.6.2"
glam = { version = "0.22.0", features = ["core-simd"] }
gltf = "1.0.0"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"

[profile.dev.package."*"]
opt-level = 1
